--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -8,7 +8,10 @@
     max-width: 1200px;
     margin: 0 auto;
 }
-
+.grid.sm-wide{
+    max-width: 1100px;
+    margin: 0 auto;
+}
 .row {
     display: flex;
     flex-wrap: wrap;
